Fix building buttons alignment

--- a/src/app/building/building.component.scss
+++ b/src/app/building/building.component.scss
@@ -5,6 +5,7 @@
 }
 mat-cell.mat-column-buttons {
   flex-direction: column;
+  align-items: flex-start;
   margin: 5px;
 
   button {
